# Vendor-master-Process

./: .gitignore  Dockerfile  Dockerfile.jenkins  Into  Jenkinsfile.test  debug_ingestion.py  docker-compose.jenkins.yml  main.py  manual_test.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: aws.yml  ci.yml  task_defination.json
backend/config/: config.yaml
backend/logger/: __init__.py  custom_logger.py
backend/src/document_chat/: retrieval.py
backend/src/document_ingestion/: data_ingestion.py
backend/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
data/: final_data.csv
experiment/: rag.ipynb
faiss_index/session_20260106_184115_b8fb30ee/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20260106_184408_48b1b2b8/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20260106_184656_96319d0e/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20260106_185411_9f5391ae/: index.pkl  ingested_meta.json
faiss_index/session_20260107_133015_838b521d/: index.pkl  ingested_meta.json
tests/: conftest.py
tests/integratrion/: test_chat_route.py  test_upload_route.py
tests/unit/: test_data_ingestion.py  test_retrieval.py
